# src/modules/raspadinha/dtos/IListRaspadinhaPremiosByRaspadinhaDTO.ts
@@ -1,0 +1,7 @@
+interface IListRaspadinhaPremiosByRaspadinhaDTO {
+
+    raspadinha_id: number;
+
+}
+
+export { IListRaspadinhaPremiosByRaspadinhaDTO };
